# DataAnalytics

./: CLAUDE.md  CODE_REVIEW.md  DataJournal.txt  Hybrid Methodology Explained.txt  Initial Price Tier Findings.txt  TODO_CODE_REVIEW.md  efa_analysis.py  efa_price_tier.py  plot_path_diagram.py  price_tier_validation_hybrid.py  pyproject.toml  requirements.txt
Data/: Better_Data_Set_Feb3.csv  Decent_Data_Set_Feb3.csv
Data_Old/: NerdClustersSharedData_2026-01-12-1020.csv  NerdClustersSharedData_2026-01-29-0854.csv
analyses/: full_outlier_detection.py  full_tier_analysis.py  quick_validation.py  run_anova.py  run_efa.py  run_ks_test.py  run_outlier_detection.py  run_rf_classifier.py
archive/: plot_path_diagram.py  plot_path_diagram_3factor.py  price_tier_validation.py  price_tier_validation_hybrid.py  sabel_price_tier_outliers.py
efa_core/: __init__.py  config.py  data.py  efa.py  models.py  output.py  stats.py  viz.py
outputs/: feature_importance.csv  tier_recommendations.csv
outputs (Feb 4)/: potential_misassignments.csv  purchaser_tier_analysis.csv  step_01_02_data_summary.csv  step_03_standardized_data.csv  step_04_factorability_tests.csv  step_07_communalities.csv  step_07_factor_loadings.csv  step_09_factor_scores.csv  step_10_11_regression_results.csv  tier_profiles.csv
outputs (Feb 4)/efa_tier_analysis/: factor_scores.csv  tier_factor_profiles.csv
outputs (Feb 4)/hybrid_validation/: feature_importance.csv  potential_misassignments.csv  purchaser_analysis.csv  (+2 more)
outputs(Jan 30)/: communalities.csv  factor_loadings.csv  factor_scores.csv
(+7 files in other folders)
